@@ -29,7 +29,7 @@
    <property name="project.name" value="Together Workflow Editor" />
    <property name="app.name" value="twe" />
 
-   <property name="targetVM" value="1.5" />
+   <property name="targetVM" value="1.6" />
 
    <replace dir="${basedir}" includes="build.properties" token="\" value="/" />
    <property file="${basedir}/build.properties" />
