@@ -195,11 +195,11 @@ public class DetailedPackageNavigator implements Observer, TreeSelectionListener
        return panel.getDisplay();
     }
 
-    public String getType() {
+    public String getComponentType() {
        return type;
     }   
 
-    public void setType(String type) {
+    public void setComponentType(String type) {
        this.type = type; 
     }
     
