@@ -126,11 +126,11 @@ public class ValidationOrSearchResultEditor extends JDialog implements
       return null;
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type;
    }
 
