@@ -264,11 +264,11 @@ public class GraphController extends Observable implements
       return "GraphComponent";
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type;
    }
 
