@@ -203,11 +203,11 @@ public class LDAPController implements JaWEComponent, Observer {
       return panel.getDisplay();
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type;
    }
 
