@@ -170,11 +170,11 @@ public class LoggingManagerComponent extends LoggingManager implements JaWECompo
       return panel;
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }   
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type; 
    }
    
