@@ -194,11 +194,11 @@ public class PackageNavigator implements JaWEComponent, Observer, TreeSelectionL
       return panel.getDisplay();
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }   
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type; 
    }
    
