@@ -120,11 +120,11 @@ public class ProblemsNavigator implements Observer, JaWEComponent {
        return panel.getDisplay();
     }
 
-    public String getType() {
+    public String getComponentType() {
        return type;
     }   
 
-    public void setType(String type) {
+    public void setComponentType(String type) {
        this.type = type; 
     }
     
