@@ -68,11 +68,11 @@ public class RecentFilesManager implements Observer, JaWEComponent {
       return menu;
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }   
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type; 
    }
    
